# canopy

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md
.claude/: settings.local.json
backend/: pyproject.toml  requirements.txt
backend/scripts/: add_contact.py  build_application.py  get_job.py  hunt_jobs.py  ingest_job.py  insert_manual_jobs.py  interview_prep.py  list_contacts.py  md_to_docx.py  pipeline_status.py  score_jobs.py  seed_sources.py
backend/src/: __init__.py  app.py  config.py  db.py  models.py
backend/src/routes/: __init__.py  applications.py  jobs.py  profile.py  search.py
backend/src/scrapers/: __init__.py  base.py  builtin.py  company.py  heb.py  indeed.py  linkedin.py  wellfound.py
backend/src/services/: __init__.py  cover.py  embeddings.py  llm.py  parser.py  project_matcher.py  resume.py  scorer.py  scraper.py
backend/src/utils/: __init__.py  dedup.py
backend/tests/: __init__.py  test_health.py
backend/tests/prompts/: conftest.py  test_cover_prompts.py  test_project_matcher_prompts.py  test_prompt_injection.py  test_prompt_keywords.py  test_prompt_length.py  test_prompt_snapshots.py  test_resume_prompts.py  test_scorer_prompts.py
backend/tests/prompts/fixtures/: sample_job.json  sample_profile.json  sample_resume.md
backend/tests/prompts/snapshots/: cover_rendered_prompt.txt  cover_system_prompt.txt  project_matcher_rendered_prompt.txt  project_matcher_system_prompt.txt  scorer_rendered_prompt.txt  scorer_system_prompt.txt  tailor_rendered_prompt.txt  tailor_system_prompt.txt
frontend/: index.html  package.json  (+1 more)
(+8 files in other folders)
